tests/transpiler/x/cpp/partial_application.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 11:04:56 GMT+7
#include <iostream>
#include <string>
#include <sstream>

int add(int a, int b) {
    return (a + b);
}

auto add5 = add(5);

int main() {
    { std::ostringstream __ss; __ss << std::boolalpha; if(false) __ss << " "; __ss << add5(3); auto __line = __ss.str(); if(!__line.empty() && __line.back() == ' ') __line.pop_back(); std::cout << __line << std::endl; }
    return 0;
}
